2009-11-17  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QGLLauncher does not support drag&drop of local files
        https://bugs.webkit.org/show_bug.cgi?id=31057

        Enable accepting files in QGraphicsWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::QGraphicsWebView):
        (QGraphicsWebView::dragEnterEvent):

2009-11-17  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] better test coverage for ErrorPageExtension
        https://bugs.webkit.org/show_bug.cgi?id=31583

        Improved the coverage of current ErrorPageExtension tests by
        adding autotests involving frameset and iframes.

        * tests/qwebpage/tst_qwebpage.cpp:
        (ErrorPage::extension): Make the ErrorPageExtension
        to work for all frames, not only the main frame.
        (tst_QWebPage::errorPageExtension): Stop using
        the 'frameset.html' resouce in this method since
        an autotest specific for frameset's is being added.
        (tst_QWebPage::errorPageExtensionInIFrames): Added.
        (tst_QWebPage::errorPageExtensionInFrameset): Added.

2009-11-16  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        API documentation fixes.

        * Api/qgraphicswebview.cpp: Removed duplicate docs.
        * Api/qwebelement.cpp: Added missing docs.
        * Api/qwebsettings.cpp: Ditto.

2009-11-14  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Antti Koivisto.

        [Qt] Broken back/forward after using ErrorPageExtension to set error page
        https://bugs.webkit.org/show_bug.cgi?id=30573

        Implemented autotests for covering the back/forward
        reset problem involving error pages.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::errorPageExtension):

2009-11-13  Adam Roben  <aroben@apple.com>

        Update for changes to FrameLoaderClient
